# mvv-proxy

./: .bazelrc  .gitignore  .prettierignore  BUILD.bazel  Dockerfile  MODULE.bazel  build.sh  deps-from-stop.sh  docker-build  docker-push  list-of-lines.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pre-commit.sh  prettify
client/: BUILD.bazel  geo-pack.config.js  index.webpack.config.js  package-lock.json  package.json  timetable.webpack.config.js  tsconfig.json  webpack.config.js
client/src/: geoindex.tsx  index.tsx  render.tsx  render2.tsx  timetable.tsx
data/: index.css
fonts/: BUILD.bazel
fonts/publicsans/: publicsans.css
server/: BUILD.bazel  package-lock.json  package.json  tsconfig.json
server/data/: 23-12-mvvlines_openData.csv  BUILD.bazel  MVV_HSTReport2412.csv  MVV_Haltestellen_Report_s26.csv  stops-for-testing.csv
server/data/qtest/: discovery.json
server/src/: data.ts  geo.test.ts  geo.ts  handlers.ts  index.ts  info.ts  lines.ts  main.ts  proxyFetcher.ts  queryDepartures.test.ts  queryDepartures.ts  recordDepartures.ts  render.ts  server.ts  stringCache.ts  tester.ts
shared/: .gitignore  BUILD.bazel  package-lock.json  package.json  tsconfig.json
shared/src/: fetcher.ts  index.ts  info.ts  queryDepartures.ts  request.ts
src/: geo.test.ts  handlers.ts  lines.ts  queryDepartures.ts  render.ts  server.ts  testing.ts
tests/: BUILD.bazel  package.json  tsconfig.json
tests/data/: BUILD.bazel
tests/data/qtest/: hbf.json  hbf_real.json  karlsplatz.json  midnight.json  multistop.json  multistopLimit.json  multistopPast.json  multistopReal.json  normal.json  planegg.json
tests/src/: discovery.test.ts  fixtures.ts  hbf.test.ts  hbf_real.test.ts  karlsplatz.test.ts  midnight.test.ts  multistop.test.ts  multistopLimit.test.ts  multistopPast.test.ts  multistopReal.test.ts  normalize.test.ts  planegg.test.ts  queryDepartures.test.ts  recordDepartures.ts  testingFetcher.ts  urlDiscovery.test.ts  urlGetDepartures.test.ts  urlMidnight.test.ts
tools/: gen-stop-signs.js
www/: BUILD.bazel  error.html  index.css  index.html  index1.html  index2.html  loadTimetable.html  loading.css  loading.html  table.css  timetable.html
