load("@aspect_rules_js//js:defs.bzl", "js_library")

# js_library (not filegroup) because rules_js requires source files consumed
# as `data` by a js_binary/js_test in another package to be wrapped in a
# JsInfo-providing target declared in their own package.
js_library(
    name = "fonts",
    srcs = glob(["publicsans/**"]),
    visibility = ["//visibility:public"],
)

# Public Sans ExtraBold (weight 800), the weight the bus-stop-sign generator
# (//:gen_stop_signs) outlines its digits from. See publicsans.css for the
# hashed-filename -> weight mapping.
filegroup(
    name = "publicsans_extrabold",
    srcs = ["publicsans/ijwGs572Xtc6ZYQws9YVwllKVG8qX1oyOymulp65ww.ttf"],
    visibility = ["//visibility:public"],
)
