load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "tsc",
    srcs = glob(["src/**/*.ts"]),
    declaration = True,
    out_dir = "out",
    root_dir = "src",
    tsconfig = ":tsconfig",
)

# Target name "pkg" is required by rules_js's default npm_package_target_name
# convention for linking first-party pnpm workspace packages (see
# npm_translate_lock's "shared": "workspace:*" usage in client/server).
js_library(
    name = "pkg",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
    deps = [":tsc"],
)
