load("@aspect_rules_js//js:defs.bzl", "js_test")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "tsc",
    srcs = glob(["src/**/*.ts"]),
    out_dir = "out",
    root_dir = "src",
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@types/node",
        ":node_modules/mvv-proxy",
        ":node_modules/shared",
    ],
)

# Each per-test file contributes one Test; queryDepartures.test.ts imports them
# all and runs them as one suite.
js_test(
    name = "query_departures_test",
    chdir = package_name(),
    data = [
        ":tsc",
        "//tests/data:departures_fixtures",
    ],
    # The midnight branch keys off Munich local time (matches production, where
    # all servers run Europe/Berlin). Pin it so the test is deterministic.
    env = {"TZ": "Europe/Berlin"},
    entry_point = "out/queryDepartures.test.js",
    size = "small",
)
