load("@aspect_rules_js//js:defs.bzl", "js_test", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "tsc",
    srcs = glob(["src/**/*.ts"]),
    out_dir = "out",
    root_dir = "src",
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@types/node",
        ":node_modules/mvv-proxy",
        ":node_modules/shared",
    ],
)

# Each per-test file contributes one Test; queryDepartures.test.ts imports them
# all and runs them as one suite.
js_test(
    name = "query_departures_test",
    chdir = package_name(),
    data = [
        ":tsc",
        "//tests/data:departures_fixtures",
    ],
    # The midnight branch keys off Munich local time (matches production, where
    # all servers run Europe/Berlin). Pin it so the test is deterministic.
    env = {"TZ": "Europe/Berlin"},
    entry_point = "out/queryDepartures.test.js",
    size = "small",
)


# Tool for capturing real MVV responses into a per-test fixtures file (see
# tests/data/qtest/). Run e.g.:
#   bazel run //server:record_departures -- \
#       tests/data/qtest/karlsplatz.json de:09162:1 now
# chdir = "server" (not this package) so the tool's default ./data/stops.csv
# resolves to //server/data:stops in the runfiles, matching how server_bin runs.
# The output path is resolved against BUILD_WORKING_DIRECTORY, so it is
# unaffected by cwd.
js_binary(
    name = "record_departures",
    chdir = "server",
    data = [
        ":tsc",
        "//server/data:stops",
    ],
    entry_point = "out/recordDepartures.js",
    visibility = ["//visibility:public"],
)

