load("@aspect_rules_js//js:defs.bzl", "js_library")

# js_library (not filegroup): rules_js requires source files consumed as
# `data` by a js_binary/js_test in another package to be wrapped in a
# JsInfo-providing target declared in their own package.
js_library(
    name = "stops",
    srcs = ["stops.csv"],
    visibility = ["//server:__pkg__"],
)

js_library(
    name = "stops_for_testing",
    srcs = ["stops-for-testing.csv"],
    visibility = ["//server:__pkg__"],
)
